# Finniko

./: .gitignore  Cargo.toml  README.md  delete_backups.bat
assets/: textures_map.json
assets/fonts/: 18.fnt  24.fnt  32.fnt
resource_packer/: Cargo.toml  glyphs_map.json  textures_map.json
resource_packer/src/: main.rs
src/: main.rs  text_renderer.rs
src/debug_info/: debug_info_controller.rs  debug_info_view.rs  fps_counter.rs  mod.rs
src/game/: actor.rs  entity.rs  game_controller.rs  game_view.rs  item.rs  map.rs  map_builder.rs  message.rs  mod.rs  player.rs  sprite_info.rs  texture_mapper.rs  tile.rs
src/game/actors/: mod.rs  player.rs  scripted_actor.rs  soldier.rs
src/game/actors/scripted_behavior/: mod.rs
texture_coords/: Cargo.toml
texture_coords/src/: lib.rs
