[package]
authors = ["Addison Schuhardt <a@schuhardt.net>"]
name = "finniko"
version = "0.1.0"
[dependencies]
bmfont = "*"
find_folder = "*"
image = "*"
lazy_static = "*"
log = "*"
ndarray = "*"
ndarray-parallel = "*"
noise = "*"
piston = "*"
piston-texture = "*"
piston2d-graphics = "*"
piston2d-opengl_graphics = "*"
pistoncore-glutin_window = "*"
rand = "0.3"
serde_json = "1.0"
simple_logger = "*"

[dependencies.texture_coords]
path = "texture_coords"
